# os-autoinst-scripts

./: .gitignore  Makefile  check-netbox-machine-state.py  check-netbox-unused-machine-power.py  monitor-openqa_job  openqa-bats-review  openqa-investigate-multi  openqa-trigger-bisect-jobs  os-autoinst-obs-auto-submit  pyproject.toml  s390x-qemu-zombie-reaper.py  trigger-openqa_in_openqa
.obs/: workflows.yml
racktables/: get_unused_machines.py
tests/: test_monitor_openqa_job.py  test_trigger_bisect_jobs.py
