[project]
name = "os-autoinst-scripts"
dynamic = ["version"]
description = ""
readme = "Readme.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "SUSE LLC" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "sh",
    "beautifulsoup4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
